# RAG

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  rag_chain.py  requirements.txt
backend/: config.py  database.py  main.py  prompts.py  vector_store.py
backend/routes/: admin.py  chat.py  documents.py  history.py  session.py  upload.py
backend/services/: agent.py  status_messages.py
backend/services/agents/: catalog_worker.py  orchestrator.py  rag_worker.py
database/: migrate.py  queries.sql  schema.sql
database/migrations/: 01_add_indexes_and_status.sql
docs/: database_setup.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/css/: style.css
frontend/js/: app.js  citations.js  documents.js  sessions.js  socket.js  utils.js
frontend/js/components/: pdfViewer.js
frontend/src/: App.jsx  index.css
frontend/src/components/chat/: ChatStreamListener.jsx  CitationItem.jsx  CitationList.jsx  MessageBubble.jsx  MessageList.jsx  QueryInput.jsx  StreamingBubble.jsx  ThinkingTrace.jsx
frontend/src/components/common/: ConfirmModal.jsx  ToastContainer.jsx
frontend/src/components/documents/: DocumentItem.jsx  DocumentList.jsx  UploadPanel.jsx
frontend/src/hooks/: useWebSocket.js
frontend/src/lib/: userId.js
frontend/src/services/: apiService.js  chatService.js  websocketService.js
frontend/src/stores/: documentStore.js  pdfStore.js  sessionStore.js  toastStore.js  uiStore.js
frontend/src/utils/: utils.js
previous files/: README.md  rag_agent.py
(+8 files in other folders)
