[project]
name = "rag-agent-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "huggingface-hub>=1.18.0",
    "langchain>=1.3.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-milvus>=0.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "pymilvus>=2.6.15",
    "pymupdf>=1.28.0",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
url = "https://pytorch.org/"
